--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple (India)</title>
+    <title>SystemMinds</title>
+    <meta name="description" content="SystemMinds is a company that provides services and products to the public.">
+    <meta name="keywords" content="SystemMinds, SystemMinds India, SystemMinds Services, SystemMinds Products">
+    <meta name="author" content="SystemMinds">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="google" content="notranslate">
+    <meta name="google" content="notranslate">
   </head>
   <body>
     <div id="root"></div>
